# eigen-feedstock

./: .appveyor.yml  .travis.yml  README.md  appveyor.yml  conda-forge.yml
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-win.yml
.ci_support/: linux_64_.yaml  linux_aarch64_.yaml  linux_ppc64le_.yaml  osx_64_.yaml  osx_arm64_.yaml  win_64_.yaml
.github/: CODEOWNERS
recipe/: 0001-cholmod_support.patch  CMakeLists.txt.patch  README.md  bld.bat  build-eigen.sh  build.bat  build.sh  build_eigen.sh  conda_build_config.yaml  debug_test_failure.patch  eigen3.pc.in.patch  int-real-conversion.patch  meta.yaml  recipe.yaml  run_test.sh  workaround_fortran.patch
recipe/test_abi/: CMakeLists.txt  test_abi.cc
